--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <!-- Projeto RPG -->
       <div class="col-md-4 mb-4">
         <div class="card shadow-sm">
-          <img src="img/projeto-rpg.png" class="card-img-top" alt="Imagem do projeto RPG One Piece">
+          <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto RPG One Piece">
           <div class="card-body">
             <h5 class="card-title">RPG: One Piece</h5>
             <p class="card-text">Crio aventuras de RPG baseadas em universos como One Piece.</p>
@@ -43,7 +43,7 @@
       <!-- Projeto Arte -->
       <div class="col-md-4 mb-4">
         <div class="card shadow-sm">
-          <img src="img/projeto-arte.png" class="card-img-top" alt="Imagem de arte digital">
+          <img src="img/projeto-2.png" class="card-img-top" alt="Imagem de arte digital">
           <div class="card-body">
             <h5 class="card-title">Arte Digital & Criatividade</h5>
             <p class="card-text">Exploro o desenho digital e a criação artística como forma de expressão. Trabalho em
@@ -58,7 +58,7 @@
       <!-- Projeto Física -->
       <div class="col-md-4 mb-4">
         <div class="card shadow-sm">
-          <img src="img/projeto-fisica.png" class="card-img-top" alt="Imagem de experimento de física">
+          <img src="img/projeto-3.png" class="card-img-top" alt="Imagem de experimento de física">
           <div class="card-body">
             <h5 class="card-title">Física na Prática</h5>
             <p class="card-text">Projeto dedicado a experiências e estudos de Física, com explicações acessíveis e
@@ -139,5 +139,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
