--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <p>Exploro a arte digital como forma de criatividade e identidade. Meus trabalhos incluem ilustrações,
             conceitos para personagens de RPG e ideias de design visual. Gosto de misturar estilos e criar peças únicas
             que traduzem minhas ideias e inspirações.</p>
-          <img src="img/projeto-arte.png" class="img-fluid rounded mt-3" alt="Imagem de arte digital feita por João Miguel">
+          <img src="img/projeto-2.png" class="img-fluid rounded mt-3" alt="Imagem de arte digital feita por João Miguel">
         </div>
       </div>
     </div>
@@ -121,7 +121,7 @@
           <p>Projeto voltado para aprender e ensinar física de forma prática. Desenvolvo resumos, simulações e
             experimentos que conectam teoria e realidade. Desde mecânica clássica até conceitos modernos, a ideia é
             mostrar como a física está presente no nosso dia a dia.</p>
-          <img src="img/projeto-fisica.png" class="img-fluid rounded mt-3" alt="Imagem de experimento físico">
+          <img src="img/projeto-3.png" class="img-fluid rounded mt-3" alt="Imagem de experimento físico">
         </div>
       </div>
     </div>
@@ -142,3 +142,4 @@
 
 
 </html>
+
